--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,68 @@
-argcomplete==3.1.2
-cfgv==3.3.1
-click==8.1.7
-colorama==0.4.6
-distlib==0.3.7
-filelock==3.12.2
-identify==2.5.26
-nodeenv==1.8.0
-packaging==23.2
-pipx==1.2.1
-platformdirs==3.10.0
-ply==3.11
-pre-commit==3.3.3
-Pyomo==6.7.0
-PyYAML==6.0.1
-userpath==1.9.1
-virtualenv==20.24.2
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+astroid=3.3.5=pypi_0
+asttokens=2.4.1=pyhd8ed1ab_0
+bzip2=1.0.8=h2466b09_7
+ca-certificates=2024.8.30=h56e8100_0
+colorama=0.4.6=pyhd8ed1ab_0
+comm=0.2.2=pyhd8ed1ab_0
+debugpy=1.8.8=py311hda3d55a_0
+decorator=5.1.1=pyhd8ed1ab_0
+dill=0.3.9=pypi_0
+exceptiongroup=1.2.2=pyhd8ed1ab_0
+executing=2.1.0=pyhd8ed1ab_0
+highspy=1.8.1=pypi_0
+importlib-metadata=8.5.0=pyha770c72_0
+ipykernel=6.29.5=pyh4bbf305_0
+ipython=8.29.0=pyh7428d3b_0
+isort=5.13.2=pypi_0
+jedi=0.19.2=pyhff2d567_0
+jupyter_client=8.6.3=pyhd8ed1ab_0
+jupyter_core=5.7.2=py311h1ea47a8_0
+krb5=1.21.3=hdf4eb48_0
+libexpat=2.6.4=he0c23c2_0
+libffi=3.4.2=h8ffe710_5
+libsodium=1.0.20=hc70643c_0
+libsqlite=3.47.0=h2466b09_1
+libzlib=1.3.1=h2466b09_2
+matplotlib-inline=0.1.7=pyhd8ed1ab_0
+mccabe=0.7.0=pypi_0
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+numpy=1.26.4=pypi_0
+openssl=3.4.0=h2466b09_0
+packaging=24.2=pyhff2d567_1
+parso=0.8.4=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pip=24.3.1=pyh8b19718_0
+platformdirs=4.3.6=pyhd8ed1ab_0
+ply=3.11=pypi_0
+prompt-toolkit=3.0.48=pyha770c72_0
+psutil=6.1.0=py311he736701_0
+pure_eval=0.2.3=pyhd8ed1ab_0
+pygments=2.18.0=pyhd8ed1ab_0
+pylint=3.3.1=pypi_0
+pyomo=6.7.0=pypi_0
+python=3.11.10=hce54a09_3_cpython
+python-dateutil=2.9.0=pyhd8ed1ab_0
+python_abi=3.11=5_cp311
+pywin32=307=py311hda3d55a_3
+pyzmq=26.2.0=py311h484c95c_3
+setuptools=75.5.0=pyhff2d567_0
+six=1.16.0=pyh6c4a22f_0
+stack_data=0.6.2=pyhd8ed1ab_0
+tk=8.6.13=h5226925_1
+tomlkit=0.13.2=pypi_0
+tornado=6.4.1=py311he736701_1
+traitlets=5.14.3=pyhd8ed1ab_0
+typing_extensions=4.12.2=pyha770c72_0
+tzdata=2024b=hc8b5060_0
+ucrt=10.0.22621.0=h57928b3_1
+vc=14.3=ha32ba9b_23
+vc14_runtime=14.42.34433=he29a5d6_23
+vs2015_runtime=14.42.34433=hdffcdeb_23
+wcwidth=0.2.13=pyhd8ed1ab_0
+wheel=0.45.0=pyhd8ed1ab_0
+xz=5.2.6=h8d14728_0
+zeromq=4.3.5=ha9f60a1_7
+zipp=3.21.0=pyhd8ed1ab_0
